Fixed Jump button on Pinned Messages
Version 1.15.7 > 1.15.8

--- a/crystalline.css
+++ b/crystalline.css
@@ -1,6 +1,6 @@
 /**********************************************************
  *           Crystalline CSS for BeautifulDiscord         *
- *                     Version 1.15.7                     *
+ *                     Version 1.15.8                     *
  *                                                        *
  *                   Created by SamuiNe                   *
  *               https://github.com/SamuiNe               *
@@ -4082,4 +4082,19 @@ input{
 
 .theme-dark .item-rK1j5B:hover{
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2{
+    background-color: rgba(255, 255, 255, 0.0);
+    box-shadow: none;
+}
+
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO{
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.actionButtons-LKmOj2 .jumpButton-1CVJpO{
+    border-radius: 0;
+    box-shadow: none;
+
 }
